--- a/peraco_website/src/App.css
+++ b/peraco_website/src/App.css
@@ -698,7 +698,7 @@ main {
   border-radius: 12px;
   border: 8px solid #9cc200 ;
 }
-@media (max-width: 768px) {
+@media  (max-width: 768px) {
   body{
     overflow-x: hidden !important;
     width: 100%;
@@ -770,4 +770,125 @@ main {
     background-color: var(--color-background);
     align-items: center;
 }
+}
+@media (min-width: 1000px) AND (max-width: 1280px )  {
+  body{
+    overflow-x: hidden !important;
+    width: 100%;
+  
+  }
+  nav {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    height: 100%;
+    width: 25%;
+    background-color: #fff;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 80px 20px;
+    gap: 20px;
+    transition: right 1.0s ease-in-out;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.2);
+    z-index: 999;
+  }
+
+  nav.nav-active {
+    right: 0;
+  }
+  .slick-list {
+    overflow: hidden !important; /* Asegura que no se corten */
+  }
+  .menu-icon {
+    display: block;
+    font-size: 28px;
+    cursor: pointer;
+  }
+
+  nav h3 {
+    margin: 0;
+    width: 100%;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e0e0e0;
+  }
+
+  header {
+    padding: 10px 15px;
+    width: 100%;
+  }
+
+  header .logo {
+    width:  100%;
+  }
+ 
+  .menu-icon {
+    display: block;
+    position: absolute;
+    right: 15%;
+    top: 30%;
+  }
+
+  
+
+  /* Evitar que imágenes o sliders desborden */
+ img .slider-container {
+    max-width: 100%;
+    height: auto;
+  }
+  .footer-container {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 200px;
+    flex-wrap: nowrap;
+  }
+  .footer-column {
+    flex: 1.0;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;  
+    margin-left: 5px;
+  }
+  .footer-center {
+    flex: 30;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 0px;
+  }
+}
+@media (max-width: 2560px )  {
+  body{
+    overflow-x: hidden !important;
+    width: 100%;
+  
+  }
+
+
+ 
+  .slick-list {
+    overflow: hidden !important; /* Asegura que no se corten */
+  }
+ 
+
+ 
+
+ 
+  header .logo {
+    width:  100%;
+  }
+ 
+
+
+  
+
+  /* Evitar que imágenes o sliders desborden */
+ img .slider-container {
+    max-width: 100%;
+    height: auto;
+  }
+  
 }
