--- a/peraco_website/src/App.css
+++ b/peraco_website/src/App.css
@@ -7,13 +7,14 @@
 }
 
 body {
-  font-family: 'Anton', Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0 auto;
   padding: 0;
   background-color: var(--color-background);
   color: var(--color-text);
   max-width: 100vw;
   overflow-x: hidden;
+  text-align: justify;
 }
 html, body{
   width: 100%;
@@ -101,6 +102,7 @@ header nav a.active {
 .value-card p {
   font-size: 1rem;
   color: #666; /* Color gris para el texto */
+  text-align: justify;
 }
 /* Estilos generales para la sección About Us */
 .about-us {
@@ -129,7 +131,7 @@ header nav a.active {
 /* Estilos para el texto */
 .about-text {
   flex: 1;
-  text-align: left;
+  text-align: justify;
   padding: 1rem;
 }
 
@@ -320,6 +322,7 @@ header nav a.active {
   font-size: 1rem;
   color: #444;
   line-height: 1.6;
+  text-align: justify;
 }
 .news-slider {
   text-align: center;
@@ -457,6 +460,7 @@ header nav a.active {
 .news-detail p {
   font-size: 1rem;
   line-height: 1.5;
+  text-align: justify;
 }
 
 
@@ -754,9 +758,6 @@ main {
     right: 15%;
     top: 30%;
   }
-
-  
-
   /* Evitar que imágenes o sliders desborden */
  img .slider-container {
     max-width: 100%;
@@ -769,6 +770,61 @@ main {
     padding: 2rem;
     background-color: var(--color-background);
     align-items: center;
+}
+.about-section {
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.about-text {
+  text-align: center; /* Centra el texto en móvil */
+  padding: 1rem 0;
+}
+
+.about-image {
+  width: 100%; /* Asegura que la imagen no se desborde */
+  text-align: center;
+}
+
+.about-image img {
+  max-width: 90%; /* Reduce el tamaño para mejor ajuste */
+  
+}
+/* Alternar orden: imagen - texto */
+.about-section:nth-child(even) {
+  flex-direction: column-reverse;
+}
+.contact-image {
+  display: none;
+}
+
+.contact-form {
+  flex: 1 1 100%; /* Hace que el formulario ocupe todo el ancho disponible */
+  text-align: center; /* Centra el contenido */
+}
+.news-detail {
+  display: flex;
+  flex-direction: column; /* Apila los elementos en columna */
+  text-align: center;
+}
+
+.news-detail h1 {
+  order: 0; /* Título primero */
+}
+
+.news-detail img {
+  order: 1; /* Imagen en medio */
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+  margin: 10px 0;
+}
+
+.news-detail-content {
+  order: 2; /* Texto al final */
+  width: 100%;
+  text-align: justify;
 }
 }
 @media (min-width: 1000px) AND (max-width: 1280px )  {
