--- a/peraco_website/src/App.css
+++ b/peraco_website/src/App.css
@@ -827,7 +827,7 @@ main {
   text-align: justify;
 }
 }
-@media (min-width: 1000px) AND (max-width: 1280px )  {
+@media (min-width: 769px) AND (max-width: 1280px )  {
   body{
     overflow-x: hidden !important;
     width: 100%;
@@ -869,8 +869,9 @@ main {
   }
 
   header {
-    padding: 10px 15px;
+    padding: 5px 15px;
     width: 100%;
+    height: 11.5rem;
   }
 
   header .logo {
@@ -916,7 +917,7 @@ main {
     gap: 0px;
   }
 }
-@media (max-width: 2560px )  {
+@media (min-width: 1280px ) and (max-width: 2560px )  {
   body{
     overflow-x: hidden !important;
     width: 100%;
